# fraudflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: pipeline.yaml
notebooks/: 01_pipeline_showcase.ipynb
src/: __init__.py  cli.py
src/data/: __init__.py  download.py  split.py
src/features/: __init__.py  engineer.py
src/monitoring/: drift.py
src/serving/: __init__.py  app.py  metrics.py
src/training/: __init__.py  evaluate.py  explain.py  models.py  train.py  tune.py
tests/: test_features.py  test_integration.py  test_models.py  test_serving.py  test_split.py  test_train.py
